# fese

./: README.md  pyproject.toml  setup.cfg  tox.ini
fese/: __init__.py  container.py  disposition.py  stream.py  tags.py
tests/: test_container.py  test_disposition.py  test_iterator.py  test_stream.py  test_subtitle_stream.py  test_subtitle_stream_disposition.py  test_tags.py  test_video_container.py
tests/data/: file_1.en.ass.srt  file_1.en.visual_impaired.ass.srt
