[metadata]
name = fese 
version = 0.2
project_urls =
    Source = https://github.com/vitiko98/fese
    Issues = https://github.com/vitiko98/fese/issues
author = Vitiko
author_email = vhnz98@gmail.com
license_file = LICENSE
description = A library to extract FFmpeg subtitle streams
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
		babelfish
    setuptools

[options.extras_require]
lint =
    black
    isort
test =
    pytest
dev =
    tox

[isort]
profile=google
src_paths=fese,tests
